--- a/style.css
+++ b/style.css
@@ -58,9 +58,13 @@ body {
     } 
 } 
 
+#heading-content{
+    color: #fff;
+}
+
 /* Main Hero Section Styles */
 .hero { 
-    background-image: url('./Images/heroImg3.avif'); 
+    background-image: url('./assets/971.jpg'); 
     background-repeat: no-repeat; 
     background-size: 100% 100%; 
     width: 100%; 
@@ -68,7 +72,7 @@ body {
     display: flex; 
     align-items: center; 
     justify-content: start; 
-    margin: 4.8rem 0; 
+    /* margin: 4.8rem 0;  */
 } 
 
 .hero .intro { 
@@ -515,3 +519,56 @@ body {
         margin: 0; 
     } 
 }
+
+.full-row{
+    width: 80%;
+    margin:auto;
+}
+ 
+
+.truncate-value {
+    --ellipsis: '...';
+    height: 100%;
+    overflow: hidden;
+    text-overflow: var(--ellipsis);
+}
+
+.truncate-multiline {
+    display: -webkit-box; /* Flex-like behavior for truncation */
+    -webkit-line-clamp: 8; /* Number of lines to show */
+    -webkit-box-orient: vertical; /* Set the box to vertical */
+    overflow: hidden; /* Hide the overflow */
+    text-overflow: ellipsis; /* Add ellipsis (...) */
+}
+
+
+#projects-container > div.p-3{
+    height: 700px;
+}
+
+#projects-container > div.p-3 .card-parent{
+    min-height: 100%;
+    height: 100%;
+}
+
+#projects-container > div.p-3 .card-parent > div:nth-child(1){
+    height: 10%;
+    max-height: 10%;
+}
+
+#projects-container > div.p-3 .card-parent > div:nth-child(2){
+    height: 90%;
+    max-height: 90%;
+}
+
+#projects-container > div.p-3 .card-parent > div:nth-child(2) > div:nth-child(1){
+    height: 70%;
+    max-height: 70%;
+}
+
+#projects-container > div.p-3 .card-parent > div:nth-child(2) > div:nth-child(2){
+    height: 30%;
+    max-height: 30%;
+    overflow: hidden;
+}
+
