--- a/app/static/styles/app.css
+++ b/app/static/styles/app.css
@@ -10,16 +10,21 @@ body {
 } 
 
 /* Header Navbar Styles */
-.navbar { 
+
+.cs-navbar { 
     display: flex; 
     align-items: center; 
     justify-content: space-between; 
     position: fixed; 
     top: 0; 
     width: 100%; 
-    background-image: linear-gradient(90deg, #74D7BB, #53C8B6, #35A99C); 
+    /* background-image: linear-gradient(90deg, #74D7BB, #53C8B6, #35A99C);  */
     background-color: transparent; 
 } 
+
+.cs-navbar > div{
+    margin: 8px 0px 0px 0px;
+}
 
 .logo { 
     padding: 0 5rem; 
@@ -770,7 +775,7 @@ body {
         font-weight: 800;
       }
   
-      #cs-thumbnail {
+      [name="cs-thumbnail"] {
         width: 50px;
         height: 50px;
       }
@@ -803,3 +808,147 @@ body {
         text-decoration: inherit;
     color: inherit;
       }
+
+      /* nav menu change
+       */
+
+       * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  --clr: #fff;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: var(--clr);
+}
+
+.navigation {
+  width: 420px;
+  height: 70px;
+  background: rgba(36, 156, 255, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+
+.navigation ul {
+  position: relative;
+  display: flex;
+  width: 350px;
+}
+
+.navigation ul li {
+  position: relative;
+  list-style: none;
+  width: 70px;
+  height: 70px;
+  z-index: 1;
+}
+
+.navigation ul li a {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.navigation ul li a .nav-icon {
+  position: relative;
+  display: block;
+  font-size: 1.5em;
+  color: #fff;
+  line-height: 75px;
+  opacity: 0.75;
+  transition: 0.5s;
+}
+
+.navigation ul li.active a .nav-icon {
+  opacity: 1;
+  color: #209cff;
+  transform: translateY(-8px);
+}
+
+.indicator {
+  position: absolute;
+  top: -10px;
+  width: 70px;
+  height: 70px;
+  background: var(--clr);
+  border-bottom-left-radius: 35px;
+  border-bottom-right-radius: 35px;
+  border: 6px solid var(--clr);
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+@media screen and (max-width: 576px) {
+    .cs-navbar {
+        top: unset;
+        bottom: 0;
+    }
+
+    .cs-navbar > div{
+        margin: 0px 0px 8px 0px
+    }
+
+    .indicator {
+        transform: rotateZ(180deg) translateY(-35px);
+      }
+}
+
+
+.indicator::before,
+.indicator::after {
+  content: "";
+  position: absolute;
+  top: 4px;
+  width: 20px;
+  height: 20px;
+  background: transparent;
+}
+
+.indicator::before {
+  left: -25.75px;
+  border-top-right-radius: 20px;
+  box-shadow: 4px -6px 0 2px var(--clr);
+}
+
+.indicator::after {
+  right: -25.75px;
+  border-top-left-radius: 20px;
+  box-shadow: -4px -6px 0 2px var(--clr);
+}
+
+.indicator span {
+  position: absolute;
+  left: -1px;
+  width: 60px;
+  height: 60px;
+  border: 4px solid #209cff;
+  border-radius: 50%;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
+  transform: scale(0.85);
+}
+
+@media (max-width: 480px) {
+  .navigation {
+    zoom: 0.8;
+  }
+}
+
+@media (max-width: 330px) {
+  .navigation {
+    zoom: 0.7;
+  }
+}
