--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -46,6 +46,15 @@
       type="text/css"
       href="{{ url_for('static', filename='styles/nav.css') }}"
     />
+
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
     {% endblock %}
   </head>
 
@@ -65,90 +74,9 @@
   </script>
 
   <body>
-    <header id="myHeader" class="container-fluid px-5 py-3">
-      <div
-        id="left"
-        class="d-flex flex-column align-items-center justify-content-between"
-      >
-        <div class="col-12">
-          <a href="/">
-            <img
-              class="img-fluid"
-              src="{{ url_for('static', filename='images/876Promotions-05.png') }}"
-              alt="876Promotions-logo"
-              style="max-height: 80px"
-            />
-          </a>
-        </div>
-
-        <div class="col-12">
-          <h6>A division of XCLUSIV Digital</h6>
-        </div>
-      </div>
-
-      <div id="right" class="d-flex align-items-center justify-content-end">
-        <nav class="navbar navbar-expand-lg bg-light sticky-top">
-          <div class="container-fluid">
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#mainMenu"
-              aria-controls="mainMenu"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div
-              class="collapse navbar-collapse justify-content-center"
-              id="mainMenu"
-            >
-              <ul class="navbar-nav mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/"
-                    >HOME</a
-                  >
-                </li>
-
-                <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="/promotions"
-                    >PROMOTIONS</a
-                  >
-                </li>
-
-                <li class="nav-item">
-                  <a
-                    class="nav-link"
-                    href="/promotion/about"
-                    role="button"
-                    aria-expanded="false"
-                    >ABOUT US</a
-                  >
-                </li>
-
-                <li class="nav-item">
-                  <a
-                    class="nav-link"
-                    aria-current="page"
-                    href="/promotion/contact"
-                    >CONTACT US</a
-                  >
-                </li>
-
-                {% if g.user.is_authenticated %}
-                <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="/admin/console"
-                    >CONSOLE</a
-                  >
-                </li>
-                {% endif %}
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </div>
-    </header>
+    <nav class="cs-navbar">
+      <div id="navigation-component" class="mx-auto"></div>
+    </nav>
 
     <!-- Show Alerts -->
     {% with messages = get_flashed_messages(with_categories=true) %} {% if
@@ -244,6 +172,17 @@
       type="text/javascript"
       src="{{ url_for('static', filename='js/script.js') }}"
     ></script>
+    <script
+      type="text/javascript"
+      src="{{ url_for('static', filename='js/component.js') }}"
+    ></script>
+
+    <script>
+      $(document).ready(function () {
+        const icons = ["home", "person", "chatbubble", "camera", "settings"];
+        createNavigation("navigation-component", icons);
+      });
+    </script>
 
     {% block scripts %} {% endblock %}
   </body>
