--- a/app/static/styles/app.css
+++ b/app/static/styles/app.css
@@ -8,7 +8,9 @@ body {
     box-sizing: border-box; 
     font-family: 'Poppins', sans-serif; 
 } 
-
+#content{
+    width: 100%;
+}
 /* Header Navbar Styles */
 
 .cs-navbar { 
