--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -94,10 +94,58 @@
   </div>
   <div class="services-content">
     <div class="container-fluid">
-      <div
-        class="row row-cols-1 row-cols-md-2 row-cols-lg-3"
-        id="projects-container"
-      ></div>
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3" id="t">
+        {% for card in blogPosts %}
+        <div class="col-md-4">
+          <div class="p-3">
+            <a class="card-anchor" href="{{ card.url }}" target="_blank">
+              <div class="card-parent rounded py-5 px-3">
+                <div class="d-inline-flex align-items-center ms-md-3 mb-4">
+                  <h3 class="card-title fw-bold mb-0">{{ card.promo_name }}</h3>
+                  <i
+                    style="color: #3d3d3d"
+                    class="fa-solid fa-circle-info ms-2"
+                  ></i>
+                </div>
+                <div class="d-flex flex-column">
+                  <div class="d-flex flex-column mb-3">
+                    <div class="ms-md-3 mb-md-4">
+                      <p class="value truncate-multiline">
+                        bootstrap table to accordion`, `Borne from the need to
+                        ~quickly~ add responsiveness to a legacy MVC
+                        application, I created this javascript library to
+                        convert bootstrap tables to accordions. It probably
+                        needs a little cleanup but it worked to solve the
+                        problem at hand.
+                      </p>
+                    </div>
+                    <div class="ms-md-3 mb-md-4">
+                      {% if card.startDate %}
+                      <div class="variance-container rounded-5 py-1 px-4">
+                        <h6 class="d-inline">{{ card.startDate }}</h6>
+                      </div>
+                      {% endif %} {% if card.subtext %}
+                      <div class="subtext-container py-1 px-4">
+                        <p class="d-inline">{{ card.subtext }}</p>
+                      </div>
+                      {% endif %}
+                    </div>
+                  </div>
+                  <div class="d-block">
+                    <img
+                      src="{{ url_for('static', filename='images/' + card.mainPicture) }}"
+                      class="rounded w-100"
+                      alt="Image representing the blog post: {{ card.promo_name }}"
+                      onerror="this.onerror=null; this.src='{{ url_for('static', filename='images/image-not-found.png') }}'"
+                    />
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
     </div>
   </div>
 </section>
